test/langtools/tools/javac/patterns/T8317300.out
T8317300.java:13:18: compiler.err.mod.not.allowed.here: final
T8317300.java:20:22: compiler.err.mod.not.allowed.here: final
2 errors
